--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/littlelink.png">
+  <link rel="icon" type="image/png" href="https://i.postimg.cc/DwGcPFLL/Bright-Colorful-Playful-Funny-Donuts-Food-Circle-Logo-removebg-preview.png">
 
 </head>
 
