--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         -->
 
         <!-- Your Image Here -->
-        <img src="images/littlelink.svg" class="avatar" srcset="images/littlelink.svg 2x" alt="">
+        <img src="https://i.postimg.cc/DwGcPFLL/Bright-Colorful-Playful-Funny-Donuts-Food-Circle-Logo-removebg-preview.png" class="avatar" srcset="images/littlelink.svg 2x" alt="">
 
         <!-- Title -->
         <h1 role="heading">Metódos Nichos Black</h1>
