--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="css/skeleton-auto.css">
 
     <!-- Brand Styles -->
-    <link rel="stylesheet" href="css/brands.css">
+    <link rel="stylesheet" href="https://i.postimg.cc/DwGcPFLL/Bright-Colorful-Playful-Funny-Donuts-Food-Circle-Logo-removebg-preview.png">
 
 
   <!-- Favicon
