--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         -->
 
         <!-- Your Image Here -->
-          <img src="https://postimg.cc/RWMfvkPZ" class="avatar" srcset="https://postimg.cc/RWMfvkPZ" alt="">
+          <img src="https://postimg.cc/RWMfvkPZ" class="avatar" srcset="images/littlelink.svg 2x" alt="">
 
         <!-- Title -->
         <h1 role="heading">Metódos Nichos Black</h1>
