--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h1 role="heading">Metódos Nichos Black</h1>
 
         <!-- Short Bio -->
-        <p>An open source DIY <a href="https://linktr.ee" target="_blank" rel="noopener" role="link">Linktree</a> alternative.</p>
+        <p>Método definivo para vender cualquier producto <a href="https://blackpro.online" target="_blank" rel="noopener" role="link">Método Nichos Black</a> alternative.</p>
 
         <!--
 
@@ -150,7 +150,7 @@
             This also includes a link to the LittleLink repository to make forking LittleLink easier.
             You can edit or remove anything here to make your own footer.
         -->
-        <p><a href="privacy.html">Privacy Policy</a> | Build your own by forking <a href="https://wkhosting.online" target="_blank" rel="noopener" role="button">WKHosting</a>.</p>
+        <p><a href="privacy.html"></a> | Desarrollado por <a href="https://wkhosting.online" target="_blank" rel="noopener" role="button">WKHosting</a>.</p>
 
       </div>
     </div>
