--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Método Nichos Black</title>
-  <meta name="description" content="https://wkhosting.online">
+  <meta name="description" content="https://wkhosting.online/">
   <meta name="author" content="Seth Cottle">
 
   <!-- Mobile Specific Metas
