--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <a class="button button-messenger" href="https://www.messenger.com/t/154335304432472/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/messenger.svg" alt="">Chat on Messenger</a><br>
 
          <!-- WhatsApp Grupo -->
-        <a class="button button-whatsapp" href="https://chat.whatsapp.com/BUljgbovd8IHnPkOga0gUe" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/whatsapp.svg" alt="">Unete al Grupo de Whastsapp</a><br>
+        <a class="button button-whatsapp" href="https://chat.whatsapp.com/BUljgbovd8IHnPkOga0gUe" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/whatsapp.svg" alt="">Unete al Grupo en WhastsApp</a><br>
 
         
         <!-- Instagram -->
